feat(integration with NBP API)