@@ -1,14 +1,15 @@
 package com.milosz.cantor.domain.rate;
 
+import com.milosz.cantor.infrastructure.nbp.NbpClient;
+import com.milosz.cantor.infrastructure.nbp.NbpResponse;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import java.math.BigDecimal;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.util.List;
-import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -16,46 +17,42 @@ import java.util.Map;
 public class RateService {
     
     private final RateSnapshotRepository snapshotRepository;
+    private final NbpClient nbpClient;
     
     @Transactional
-    public RateSnapshot createMockSnapshot() {
+    public RateSnapshot fetchRatesFromNbp() {
         if (snapshotRepository.existsByEffectiveDate(LocalDate.now())) {
-            log.info("Snapshot for today already exists, returning existing one");
+            log.info("Today's rates already exist in the database, fetching from there...");
             return snapshotRepository.findFirstByOrderByEffectiveDateDesc().get();
         }
-        
-        Map<String, BigDecimal> mockRates = Map.of(
-            "USD", new BigDecimal("3.98"),
-            "EUR", new BigDecimal("4.32"),
-            "GBP", new BigDecimal("5.12"),
-            "CHF", new BigDecimal("4.56")
-        );
-        
+
+        NbpResponse nbpResponse = nbpClient.fetchTodayRates();
+
         RateSnapshot snapshot = RateSnapshot.builder()
             .baseCurrency("PLN")
             .source("NBP")
             .fetchedAt(Instant.now())
-            .effectiveDate(LocalDate.now())
+            .effectiveDate(nbpResponse.getEffectiveDate())
             .build();
         
-        List<Rate> rates = mockRates.entrySet().stream()
+        List<Rate> rates = nbpResponse.getRates().entrySet().stream()
             .map(entry -> Rate.builder()
                 .currency(entry.getKey())
                 .rate(entry.getValue())
                 .snapshot(snapshot)
                 .build())
-            .toList();
+            .collect(Collectors.toList());
         
         snapshot.setRates(rates);
         
         RateSnapshot saved = snapshotRepository.save(snapshot);
-        log.info("Created mock with {}", saved.getRates().size());
+        log.info("Saved snapshot with {} rates", saved.getRates().size());
         
         return saved;
     }
     
     public RateSnapshot getLatestSnapshot() {
         return snapshotRepository.findFirstByOrderByEffectiveDateDesc()
-            .orElseGet(() -> createMockSnapshot());
+            .orElseGet(() -> fetchRatesFromNbp());
     }
 }
